fixed issue with chart.js not showing from external file

--- a/public/css/icons.css
+++ b/public/css/icons.css
@@ -1,4 +1,4 @@
-.material-icons {
+.material-icons-outlined {
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
@@ -21,11 +21,4 @@
 
     /* Support for IE. */
     font-feature-settings: 'liga';
-}
-
-.avatar {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
 }
